<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Titulo de la actividad -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_activity_signupCustomer"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginBottom="15dp"
        />



    <EditText
        android:id="@+id/edtCustomerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_IDCustomer"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edtContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_contactName"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edtContactTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_contactTitle"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edtShipName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_shipName"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edtShipAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_shipAddress"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edtShipCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_shipCity"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edtShipRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_shipRegion"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edtShipPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_shipPostalCode"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/edtShipCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_shipCountry"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="45dp"
        android:minHeight="48dp"/>



    <Button
        android:id="@+id/btnRegistrarC"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/prompt_btnRegistrarC"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>
