<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Botón de cerrar sesión (de arriba) -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:layout_marginTop="15dp"
        android:textSize="16sp" />

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_activity_main"
        android:textAlignment="center"
        android:textSize="24sp" />

    <!-- ListView de productos -->
    <ListView
        android:id="@+id/productListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" /> <!-- Ocupa el espacio restante -->

    <!-- Botón para ver carrito, ahora en la parte inferior -->
    <Button
        android:id="@+id/btnVerCarrito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_VerCarrito"
        android:layout_marginTop="20dp" />
</LinearLayout>
